# LS-ViT-Action-Recog

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: predict.py  prepare_data.py  train.py
src/lsvit_action/: __init__.py  config.py  constants.py
src/lsvit_action/data/: __init__.py  dataloaders.py  dataset.py  transforms.py
src/lsvit_action/engine/: __init__.py  checkpoint.py  evaluator.py  trainer.py
src/lsvit_action/models/: __init__.py  layers.py  lsvit.py  motion.py
src/lsvit_action/utils/: __init__.py  io.py  logging_utils.py  seed.py  visualization.py
